RF_00.00.016 | Freestyle >joining class issues (#1512)